@@ -1,3 +1,7 @@
+2007-04-02  Andrew Cagney  <cagney@redhat.com>
+
+	* UnhandledWaitBuilder.java: New file.
+
 2007-03-29  Andrew Cagney  <cagney@redhat.com>
 
 	* Wait.java (Observer): Replace with separate WaitBuilder class.
